tests/baselines/reference/annotationDeclarationFieldTypeError5.errors.txt
tests/cases/conformance/annotations/annotationDeclarationFieldTypeError5.ets(2,5): error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'any'.


==== tests/cases/conformance/annotations/annotationDeclarationFieldTypeError5.ets (1 errors) ====
    @interface Anno {
        a: any
        ~
!!! error TS28033: A type of annotation property have to be number, boolean, string, const enumeration types or array of above types, got: 'any'.
    }